# hiring_compass_au

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  docker.yml
data/: raw.dvc
docs/: design-doc.md
notebooks/: data_exploration.ipynb  db_overview.ipynb  gmail_first_exploration.ipynb  gmail_sql.ipynb
scripts/: bootstrap_workspace.py  init_db.py  migrate_all.py  migrate_job_ad_enrichment_in_progress.py  migrate_job_ads_add_listing_date_utc.py  run_job_alert_pipeline.py  run_job_alerts.sh  run_mail_ingestion.py  run_prod_smoke_test.sh
src/hiring_compass/: workspace.py
src/hiring_compass_au/: schemas.py  settings.py  workspace.py
src/hiring_compass_au/domain/: models.py
src/hiring_compass_au/enrichment/: url_canonicalizer.py
src/hiring_compass_au/storage/: mail_store.py
tests/: conftest.py  test_observability_counters.py  test_observability_summary.py  test_schemas.py  test_settings.py  test_workspace.py
tests/integration/: test_db_schema.py  test_hit_store.py  test_job_promote_runner_enrichment.py  test_job_store.py  test_mail_parse_runner_db.py  test_mail_store.py  test_mail_store_fetch_error_metadata.py  test_url_canonicalize_runner_db.py
tests/job_alerts/fixtures/: seek_alert_minimal.html
tests/job_alerts/integration/: test_db_schema.py  test_hit_store.py  test_job_promote_runner_enrichment.py  test_mail_parse_runner_db.py  test_mail_store.py  test_url_canonicalize_runner_db.py
tests/pipelines/: test_main_exit_codes.py  test_observability_counters.py  test_observability_summary.py  test_partial_results_logged.py
tests/unit/: test_gmail_auth.py  test_pydantic_schemas.py  test_seek_mail_parser.py  test_settings.py  test_url_canonicalizer.py
(+88 files in other folders)
