[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hiring-compass-au"
version = "0.1.0"
description = "Job offer ranking engine for the Australian market"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "jupyter",
    "ipykernel",
    "pydantic>=2",
    "pydantic-settings>=2.1",
    "dvc[s3]",
    "dagshub",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

